Fix on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,6 +112,12 @@ div.highlighter-rouge {
   .post_navi-arrow {
     top: 15% !important;
   }
+  
+  #theme-switcher {
+    right: 0px;
+    top: 44px;
+    margin-right: 20px;
+  }
 }
 
 // override bottom margin to make hr look nicer
